css/navmenu.css
html, body {
  height: 100%;
}
body {
  padding: 44px 0 0 0;
}

.navmenu {
  padding-top: 50px;
}

.navbar {
    text-align: center;
    min-height: 44px;
    background-image: url("../images/binding_dark.png");
}
.navbar-brand {
  display: inline-block;
  float: none;
}
.navbar-toggle {
    float: left;
    margin-left: 10px;
    position: absolute;
}
.left-navbar-toggle {
  float: left;
  margin-left: 15px;

}
.right-navbar-toggle {
    float: right;
    margin-left: 15px;


}

.navmenu-default {
    background-image: url("../images/binding_dark.png");
}
.container {
    border: none;
    height: 100%;
    width: 100%;
    background-image: url("../images/binding_dark.png");
}

@media (min-width: 992px) {
  body {
    padding: 0 250px 0 250px;
  }
  .navmenu {
    padding-top: 0;
  }
  #title {
    position: absolute;
    top: 0.8em;
    left: 300px;
    width: 300px;
    z-index: 20000;
    padding: 0 0.5em 0.5em 0.5em;
    color: #000000;
  }
}
@media (max-width: 992px) {
    #title {
        position: absolute;
        top: 0.8em;
        left: 70px;

        width: 300px;
        z-index: 20000;
        padding: 0 0.5em 0.5em 0.5em;
        color: #ffffff;
    }
}
@media (max-width: 721px) {
    #title {
        position: absolute;
        top: 1.2em;
        left: 70px;
        font-size: 98%;
        width: 300px;
        z-index: 20000;
        padding: 0 0.5em 0.5em 0.5em;
        color: #ffffff;
    }
}

#right-toogle-button{
    float: right;
    margin-right: 10px;
    position: relative;
}

